tests/compile_fail/invalid_style_layer_name_literal.rs
use surgeist_style::StyleLayerName;

fn main() {
    let _name = StyleLayerName {
        components: Vec::new(),
    };
}
