tests/compile_fail/invalid_style_layer_name_literal.stderr
error[E0451]: field `components` of struct `StyleLayerName` is private
 --> tests/compile_fail/invalid_style_layer_name_literal.rs:5:9
  |
4 |     let _name = StyleLayerName {
  |                 -------------- in this type
5 |         components: Vec::new(),
  |         ^^^^^^^^^^ private field
